nambahin file baru dan update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- NAVBAR -->
 	<div class="navbar">
 		<header>
-			<h1 class="logo">LOGONE KENE CUK</h1>
+			<img class="logo" src="_img/RC WHITE.svg" />
 		<nav>
 			<ul class="nav_links">
 				<li><a href="#">Home</a></li>
@@ -36,7 +36,7 @@
 		<div class="panel active" style="background-image: url('_img/RC1.jpg');">
 			<h3>A Wave From Yesterday's Session</h3>
 		</div>
-		<div class="panel" style="background-image: url('_img/RC2.jpg');">
+		<div class="panel " style="background-image: url('_img/RC2.jpg');">
 			<h3>It is what it is</h3>
 		</div>
 		<div class="panel" style="background-image: url('_img/RC3.jpg');">
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 
-	<script src="custom.js"></script>
+	<script src="expand.js"></script>
 
 	<!-- CONTENT END -->
 
